--- a/app.css
+++ b/app.css
@@ -1527,7 +1527,7 @@ ZOOM IMAGE CURSOR
 ================================================================================
 */
   .demo-image {
-    cursor: url("https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60dc69289d7b776bb9ec5ab0_close-fullscreenn.svg") 64 64, auto; 
+    cursor: url("/wp-content/uploads/2021/08/close-fullscreen.svg") 64 64, auto; 
   
   }
 
