--- a/app.css
+++ b/app.css
@@ -1060,16 +1060,16 @@ FILEPOND STYLING
  */
 /* bordered drop area */
 
-/* .filepond--panel-root {
+.filepond--panel-root {
   background-color: transparent!important;
   border: 1px solid var(--frkablack)!important;
   color: var(--frkablack)!important;
-} */
+}
 
-/* .filepond--file-status {
+.filepond--file-status {
 display:none!important;
 }
- */
+
 .crop-para {
 margin-bottom: 2em;
 }
@@ -2057,11 +2057,11 @@ color: var(--frkayellow)!important;
 .filepond--panel-root {
   border-radius: 0.5em;
   /* background-color: #f1f0ef; */
-  background-color: var(--frkablack);
+ /*  background-color: var(--frkablack); */
   border-radius: 0.5px;
 
-/*   background-color: transparent!important; */
-  border: 1px solid var(--frkablack);
+  background-color: transparent!important; 
+  border: 1.5px solid var(--frkablack);
   color: var(--frkablack);
 
   
