--- a/app.css
+++ b/app.css
@@ -1060,27 +1060,27 @@ FILEPOND STYLING
  */
 /* bordered drop area */
 
-.filepond--panel-root {
+/* .filepond--panel-root {
   background-color: transparent!important;
   border: 1px solid var(--frkablack)!important;
   color: var(--frkablack)!important;
 }
-
-.filepond--file-status {
+ */
+/* .filepond--file-status {
 display:none!important;
-}
+} */
 
 .crop-para {
 margin-bottom: 2em;
 }
 
 
-.filepond--file-action-button.filepond--file-action-button svg {
+/* .filepond--file-action-button.filepond--file-action-button svg {
   color: var(--frkablack)!important;
   margin-left: 0.4em!important;
   margin-top: 0.4em!important;
 
-}
+} */
 
 
 .vert {
@@ -1104,15 +1104,15 @@ user-select:none;
 
 }
 
-.filepond--drop-label.filepond--drop-label label {
+/* .filepond--drop-label.filepond--drop-label label {
   padding: 1.75em 0.5em 0.5em 0.5em!important;
   width: 100%!important;
-}
+} */
 
 
-.slideshow__item img {
+/* .slideshow__item img {
   width: 100%;
-}
+} */
 
 
 
@@ -1331,6 +1331,9 @@ border-radius: 50%;
   display: block;
   margin: 0;
   padding: 0.5em; /* use padding instead of margin so click area is not impacted */
+
+  /* padding: 1.75em 0.5em 0.5em 0.5em!important; */
+ /*  width: 100%!important; */
 }
 .filepond--drop-label label {
   cursor: default;
@@ -1388,6 +1391,10 @@ border-radius: 50%;
 .filepond--file-action-button.filepond--file-action-button svg {
   width: 100%;
   height: 100%;
+  color: var(--frkablack)!important;
+  margin-left: 0.4em!important;
+  margin-top: 0.4em!important;
+
 }
 .filepond--file-action-button.filepond--file-action-button {
   /* bigger touch area */
