--- a/app.css
+++ b/app.css
@@ -1104,10 +1104,10 @@ user-select:none;
 
 }
 
-/* .filepond--drop-label.filepond--drop-label label {
+.filepond--drop-label.filepond--drop-label label {
   padding: 1.75em 0.5em 0.5em 0.5em!important;
   width: 100%!important;
-} */
+}
 
 
 /* .slideshow__item img {
@@ -1330,10 +1330,10 @@ border-radius: 50%;
 .filepond--drop-label.filepond--drop-label label {
   display: block;
   margin: 0;
-  /* padding: 0.5em; /* use padding instead of margin so click area is not impacted */ 
+  padding: 0.5em; /* use padding instead of margin so click area is not impacted */
 
-  padding: 1.75em 0.5em 0.5em 0.5em;
-   width: 100%!important; 
+  /* padding: 1.75em 0.5em 0.5em 0.5em!important; */
+ /*  width: 100%!important; */
 }
 .filepond--drop-label label {
   cursor: default;
