--- a/app.css
+++ b/app.css
@@ -868,10 +868,10 @@ TEST YOUR DESIGN
 }
 
 /*LOCATION HOVER*/
-.webinar-posts__event-item:hover {
+/* .webinar-posts__event-item:hover {
   background-color: #231f20;
   color: #ffdc52;
-}
+} */
 
 
 
