--- a/app.css
+++ b/app.css
@@ -653,7 +653,7 @@ MAPBOX
 }
 
 .marker {
-  background-image: url('/wp-content/themes/frkaplus/images/marker-fat.svg');
+  background-image: url('https://uploads-ssl.webflow.com/6061fc4a0ad1c29787bd162c/60dece2a43a86be3aa2f9c68_marker-fat.svg');
   background-size: cover;
   width: 1.6em;
   height: 2.4em;
