--- a/app.css
+++ b/app.css
@@ -1236,8 +1236,8 @@ border-radius: 50%;
   width: 100%;
   height: 100%;
   color: var(--frkablack)!important;
-  margin-left: 0.4em!important;
-  margin-top: 0.4em!important;
+/*   margin-left: 0.4em!important;
+  margin-top: 0.4em!important; */
 
 }
 .filepond--file-action-button.filepond--file-action-button {
