--- a/app.css
+++ b/app.css
@@ -780,7 +780,7 @@ TEST YOUR DESIGN
     height: 0px;
     width: 100%;
     z-index: 9;
-    background-color: #f5f5f5;
+    background-color: transparent;
     vertical-align: middle;
     -webkit-box-align: center;
     -ms-flex-align: center;
