--- a/app.css
+++ b/app.css
@@ -1708,7 +1708,7 @@ color: var(--frkayellow)!important;
   left: 0;
   right: 0;
   z-index: 1;
-
+height: 50px;
   padding: 0;
   margin: 0.25em;
 
