--- a/app.css
+++ b/app.css
@@ -2905,8 +2905,8 @@ display: none;
 .splide-img {
   width: 100%;
   height: 100%;
-  -o-object-fit: contain;
-  object-fit: contain;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 .splide__track {
