--- a/app.css
+++ b/app.css
@@ -169,7 +169,7 @@ LOADER
   width: var(--loader-width);
   height: var(--loader-height);
   background-color: var(--frkayellow);
-  margin-top: -2em;
+/*   margin-top: -2em; */
  
 }
 
