--- a/app.css
+++ b/app.css
@@ -157,7 +157,7 @@ LOADER
 .loader__mask {
   position: absolute;
   display: flex;
-  justify-content: center;
+  justify-content: center;r
   align-items: center;
   width: 100%;
   height: 100%;
@@ -373,18 +373,6 @@ COUNTER / BROJAČ O NAMA
   font-feature-settings: "tnum";
   font-variant-numeric: tabular-nums;
 }
-
-/*
-================================================================================
-OKOMITI TXT
-================================================================================
-*/
-  
-  .okomito {
-    writing-mode: vertical-rl;
-    text-orientation: mixed;
-    }
-
 
 
 /*
